# Offroad-routing-engine

./: .buildinfo  .coverage  .gitignore  .pre-commit-config.yaml  Graph.ipynb  Iterational.ipynb  Iterative.md  LICENSE.md  Project.ipynb  Project_update.ipynb  README.html  README.md  Test.ipynb  Untitled.ipynb  example.ipynb  find_pair.py  geometry.py  graph.py  graph_test.py  index.html  iterative.py  map_download.ipynb  readme_iterative.ipynb  request_map.osm  requirements.txt  review.ipynb  searchindex.js  segment_visibility.py  setup.cfg  setup.py  test_map.osm  thoughts.ipynb  visibility_graph.ipynb  visibility_graph.py
.git-old/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-old/logs/: HEAD
Iterative/: README.md  example_iterative.ipynb  iterative.py
attempts/: map_download.ipynb
data/: planet_38.5855,62.8263_38.6671,62.8489.osm.pbf  test_map.osm  track.gpx  valuevo.osm.pbf
docs/: CNAME  OSM_data.ipynb  README.html  README.md  conf.py  example.ipynb  genindex.html  graph_usage.ipynb  index.html  index.rst  objects.inv  search.html  searchindex.js  usage.ipynb  visibility_graph.ipynb
docsrc/: index.rst
first_version/: ellipse.py  graph.ipynb  graph.py
geometry/: algorithm.py  algorithms.py  ch_localization.py  convex_hull.py  edges_inside.py  ellipse.py  geometry.py  inner_edges.py  linestring.py  locate_convex.py  polygon.py  supporting_convex.py  supporting_line.py  supporting_non_convex.py  supporting_pair.py  supporting_pair_ch.py
ideas/: ellipse.py
maps/: [34, 59, 34.2, 59.1].xml  kozlovo.gpkg  kozlovo.h5  kozlovo.json  kozlovo.npy  kozlovo.pbf  kozlovo_36_5645_361_565.h5  kozlovo_36_5645_361_565_clear.h5  kozlovo_extended_362_565_367_57.h5  test.gpkg  test.json  test_map.osm  user_area.gpkg  user_area.h5  user_area.json  user_area.npy  user_area.osm.pbf
osm_data/: coord_filter.py  geometry_saver.py  osm_converter.py  osm_downloader.py  parser.py  pruner.py  tag_value.py
parsers/: coord_filter.py  df_builder.py  get_coord.py  gpx_parser.py  mp_parser.py  osm_converter.py  osm_data.py  osm_downloader.py  osm_parser.py  pruner.py  readme_gpx.ipynb
pathfinding/: astar.py  gpx_track.py  path.py  priority_queue.py
presentations/: review.ipynb  step_1.md
tests/: Test_1.py  Test_2.py  Test_download.py  Test_load.py  Test_preload.py  Unix_test_1.py  Unix_test_2.py  Win_test_1.py  Win_test_2.py  astar_1.py  astar_2.py  graph_1.py  graph_2.py  graph_download.py  graph_preload_1.py  graph_preload_2.py  test_algorithms.py  test_astar.py  test_ch_localization.py  test_convex_hull.py  test_geometry.py  test_graph.py  test_inner_edges.py  test_load_2.py  test_preload_1.py  test_supporting_line.py  test_supporting_pair.py
visibility/: segment_visibility.py  visibility_graph.py
(+89 files in other folders)
