[metadata]
name = offroad_routing
version = 0.2.0
author = Denis Kozub
author_email = denikozub@gmail.com
description = Off-road navigation system.
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Documentation = https://github.com/Denikozub/Offroad-routing-engine#documentation
    Source = https://github.com/Denikozub/Offroad-routing-engine

[options]
python_requires = >=3.8
packages = offroad_routing
package_dir =
    =src
zip_safe = no
install_requires =
    tables
    ipython
    matplotlib
    scipy
    pandas
    numpy
    shapely
    networkx
    mplleaflet
    tqdm
    geopy
    rdp
    pyrosm

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
offroad_routing = py.typed

[flake8]
max-line-length = 140