[metadata]
name = offroad_routing
version = 0.2.0
author = Denis Kozub
author_email = denikozub@gmail.com
description = Off-road navigation system.
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Documentation = https://denikozub.github.io/Offroad-routing-engine/
    Source = https://github.com/Denikozub/Offroad-routing-engine/

[options]
python_requires = >=3.8
packages = offroad_routing
package_dir =
    =src
zip_safe = no
install_requires =
    rtree
    GDAL
    pyproj
    fiona
    shapely
    numpy
    pandas
    geopandas
    scipy
    networkx
    pyrosm
    rdp
